Add username password API authentication
